// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTimePickerTitle.ts should render ampm buttons 1`] = `
<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      2
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn">
      13
    </div>
  </div>
  <div class="v-time-picker-title__ampm">
    <div class="v-picker__title__btn v-picker__title__btn--active">
      AM
    </div>
    <div class="v-picker__title__btn">
      PM
    </div>
  </div>
</div>
`;

exports[`VTimePickerTitle.ts should render component in 24hr 1`] = `
<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      14
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn">
      13
    </div>
  </div>
</div>
`;

exports[`VTimePickerTitle.ts should render component in ampm 1`] = `
<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      2
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn">
      13
    </div>
  </div>
</div>
`;

exports[`VTimePickerTitle.ts should render disabled component 1`] = `
<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn v-picker__title__btn--readonly">
      2
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn v-picker__title__btn--readonly">
      13
    </div>
  </div>
</div>
`;

exports[`VTimePickerTitle.ts should render seconds 1`] = `
<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      2
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn">
      13
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn">
      30
    </div>
  </div>
</div>
`;

exports[`VTimePickerTitle.ts should render with selectMode from mount 1`] = `
<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      2
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn v-picker__title__btn--active">
      13
    </div>
  </div>
</div>
`;
